--- a/templates/items/cohort_expert-sheet.hbs
+++ b/templates/items/cohort_expert-sheet.hbs
@@ -17,6 +17,15 @@
       {{> "systems/eunos-blades/templates/parts/tier-block.hbs" }}
     </section>
 
+    {{!-- Types --}}
+    {{#if isGM}}
+    <section class="cohort-types full-width flex-horizontal">
+      {{#each system.subtypes as |subtype|}}
+        <input class="shadowed cohort-type-input" type="text" value="{{subtype}}" name="system.subtypes.{{calc @index "+" 1}}" />
+      {{/each}}
+    </section>
+    {{/if}}
+
     {{!-- Harm --}}
     <section class="cohort-harm full-width flex-horizontal">
       <label class="filled-label">Harm</label>
@@ -28,7 +37,7 @@
         </div>
       </div>
       <div class="flex-horizontal harm-level harm-level-1 {{~#if (test system.harm.value "==" 1)}} active{{/if}}"
-        data-harm-click="1">
+        data-harm-click="1" data-dtype="Number">
         <span class="harm-number shadowed">1</span>
         <div class="flex-vertical">
           <span class="harm-label shadowed">Weakened</span>
@@ -36,15 +45,15 @@
         </div>
       </div>
       <div class="flex-horizontal harm-level harm-level-2 {{~#if (test system.harm.value "==" 2)}} active{{/if}}"
-        data-harm-click="2">
+        data-harm-click="2" data-dtype="Number">
         <span class="harm-number shadowed">2</span>
         <div class="flex-vertical">
           <span class="harm-label shadowed">Impaired</span>
-          <span class="harm-effect shadowed">-1d</span>
+          <span class="harm-effect shadowed">-1d to Quality Rolls</span>
         </div>
       </div>
       <div class="flex-horizontal harm-level harm-level-3 {{~#if (test system.harm.value "==" 3)}} active{{/if}}"
-        data-harm-click="3">
+        data-harm-click="3" data-dtype="Number">
         <span class="harm-number shadowed">3</span>
         <div class="flex-vertical">
           <span class="harm-label shadowed">Broken</span>
@@ -52,7 +61,7 @@
         </div>
       </div>
       <div class="flex-horizontal harm-level harm-level-4 {{~#if (test system.harm.value "==" 4)}} active{{/if}}"
-        data-harm-click="4">
+        data-harm-click="4" data-dtype="Number">
         <span class="harm-number shadowed">4</span>
         <div class="flex-vertical">
           <span class="harm-label shadowed">Dead</span>
@@ -89,6 +98,16 @@
           <span class="tab-title">GM Notes</span>
         </label>
         {{editor system.gm_notes target="system.gm_notes" button=true owner=owner editable=isGM}}
+        {{/if}}
+
+        {{#if isGM}}
+        <label class="comp tab-label">
+          <a class="comp-control comp-button comp-add effect-control" data-action="create" title="Create Effect">
+            <i class="fas fa-plus-square"></i>
+          </a>
+          <span class="tab-title">Active Effects</span>
+        </label>
+        {{> "systems/eunos-blades/templates/parts/active-effects.hbs"}}
         {{/if}}
       </div>
     </section>
