--- a/templates/items/cohort_gang-sheet.hbs
+++ b/templates/items/cohort_gang-sheet.hbs
@@ -11,7 +11,6 @@
 
     {{!-- Header --}}
     <section class="sheet-top">
-      <img class="sheet-img" src="{{item.img}}" data-edit="img" title="{{item.name}}" />
       <input class="sheet-title shadowed" type="text" name="name" value="{{item.name}}" />
       <div class="sheet-subtitle cohort-type-line">{{subtitle}}</div>
       {{> "systems/eunos-blades/templates/parts/tier-block.hbs" }}
@@ -24,6 +23,15 @@
       </div>
     </section>
 
+    {{!-- Types --}}
+    {{#if isGM}}
+    <section class="cohort-types full-width flex-horizontal">
+      {{#each system.subtypes as |subtype|}}
+        <input class="shadowed cohort-type-input" type="text" value="{{subtype}}" name="system.subtypes.{{calc @index "+" 1}}" />
+      {{/each}}
+    </section>
+    {{/if}}
+
     {{!-- Harm --}}
     <section class="cohort-harm full-width flex-horizontal">
       <label class="filled-label">Harm</label>
@@ -35,7 +43,7 @@
         </div>
       </div>
       <div class="flex-horizontal harm-level harm-level-1 {{~#if (test system.harm.value "==" 1)}} active{{/if}}"
-        data-harm-click="1">
+        data-harm-click="1" data-dtype="Number">
         <span class="harm-number shadowed">1</span>
         <div class="flex-vertical">
           <span class="harm-label shadowed">Weakened</span>
@@ -43,15 +51,15 @@
         </div>
       </div>
       <div class="flex-horizontal harm-level harm-level-2 {{~#if (test system.harm.value "==" 2)}} active{{/if}}"
-        data-harm-click="2">
+        data-harm-click="2" data-dtype="Number">
         <span class="harm-number shadowed">2</span>
         <div class="flex-vertical">
           <span class="harm-label shadowed">Impaired</span>
-          <span class="harm-effect shadowed">-1d</span>
+          <span class="harm-effect shadowed">-1d to Quality Rolls</span>
         </div>
       </div>
       <div class="flex-horizontal harm-level harm-level-3 {{~#if (test system.harm.value "==" 3)}} active{{/if}}"
-        data-harm-click="3">
+        data-harm-click="3" data-dtype="Number">
         <span class="harm-number shadowed">3</span>
         <div class="flex-vertical">
           <span class="harm-label shadowed">Broken</span>
@@ -59,12 +67,12 @@
         </div>
       </div>
       <div class="flex-horizontal harm-level harm-level-4 {{~#if (test system.harm.value "==" 4)}} active{{/if}}"
-        data-harm-click="4">
+        data-harm-click="4" data-dtype="Number">
         <span class="harm-number shadowed">4</span>
         <div class="flex-vertical">
           <span class="harm-label shadowed">Dead</span>
-          <span class="harm-effect shadowed">Replace: {{#if item.parent}}{{calc item.parent.system.tier.value "+"
-            2}}{{else}}Tier + 2{{/if}} Coin</span>
+          <span class="harm-effect shadowed">Pay {{#if item.parent}}{{calc item.parent.system.tier.value "+"
+            2}}{{else}}Tier + 2{{/if}} Coin to Replace</span>
         </div>
       </div>
     </section>
@@ -96,6 +104,16 @@
           <span class="tab-title">GM Notes</span>
         </label>
         {{editor system.gm_notes target="system.gm_notes" button=true owner=owner editable=isGM}}
+        {{/if}}
+
+        {{#if isGM}}
+        <label class="comp tab-label">
+          <a class="comp-control comp-button comp-add effect-control" data-action="create" title="Create Effect">
+            <i class="fas fa-plus-square"></i>
+          </a>
+          <span class="tab-title">Active Effects</span>
+        </label>
+        {{> "systems/eunos-blades/templates/parts/active-effects.hbs"}}
         {{/if}}
       </div>
     </section>
